# edu_projects

./: CMakeLists.txt  README.md
Agenda/: CMakeLists.txt
DBs/: agenda.db  agenda_demo.db
src/: main.c  main.h
src/agenda/config/: agenda_config.h
src/agenda/core/: agenda.c  agenda.h  agenda_interface.c
src/agenda/core/console/: console.c  console.h
src/agenda/core/db/: db.c  db.h
src/agenda/core/fsm/: fsm.c  fsm.h  fsm_add_event.c  fsm_add_event.h  fsm_list_events.c  fsm_list_events.h  fsm_next_event.c  fsm_next_event.h  fsm_reminder.c  fsm_reminder.h  fsm_search.c  fsm_search.h
src/agenda/interface/: agenda_interface.h
src/agenda/utils/: utils.c  utils.h
src/libs/: CMakeLists.txt  Makefile  cmake_install.cmake
src/libs/sqlite/: CMakeLists.txt  Makefile  cmake_install.cmake
